# Brainiac

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc
example/: brainiac.json
include/brainiac/: Config.hpp  ConfigHint.hpp  ProxyServer.hpp  ProxySession.hpp  ServerConfig.hpp  SessionManager.hpp
src/: CMakeLists.txt  main.cc
src/brainiac/: ProxyServer.cc  ProxySession.cc  ServerConfig.cc  SessionManager.cc
